Add CanChange Solution